--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,27 @@
-asgiref==3.9.1
-Django==5.2.4
+asgiref==3.8.1
+attrs==20.3.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.2
+cryptography==45.0.4
+Django==5.2.2
+idna==3.10
+jellyfish==0.11.2
+lib50==3.0.12
+markdown2==2.5.3
+packaging==25.0
+pexpect==4.9.0
+ptyprocess==0.7.0
+pycparser==2.22
 python-decouple==3.8
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.4
+reverse==0.1.0
+setuptools==80.9.0
 sqlparse==0.5.3
+submit50==3.2.0
+termcolor==1.1.0
+urllib3==2.4.0
+wget==3.2
+whitenoise==6.9.0
