--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cffi==1.17.1
 charset-normalizer==3.4.2
 cryptography==45.0.4
 Django==5.2.2
+gunicorn==23.0.0
 idna==3.10
 jellyfish==0.11.2
 lib50==3.0.12
